Closed
Bug 1593291
Opened 6 years ago
Closed 6 years ago
Assertion failure: mFrameWillChangeBudgets.Contains(aFrame), at /builds/worker/workspace/build/src/layout/painting/nsDisplayList.cpp:2507
Categories
(Core :: Web Painting, defect, P3)
Core
Web Painting
Tracking
()
RESOLVED
FIXED
mozilla72
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | fixed |
People
(Reporter: bc, Assigned: mikokm)
References
(Blocks 1 open bug, )
Details
(4 keywords)
Attachments
(2 files)
- https://rp-online.de/nrw/staedte/duisburg/
- Assertion failure: mFrameWillChangeBudgets.Contains(aFrame) Nightly on Fedora 30 at least.
Assertion failure: mFrameWillChangeBudgets.Contains(aFrame), at /builds/worker/workspace/build/src/layout/painting/nsDisplayList.cpp:2507
#01: nsDisplayListBuilder::IsInWillChangeBudget(nsIFrame*, nsSize const&)
#02: mozilla::ScrollFrameHelper::IsScrollingActive(nsDisplayListBuilder*) const
#03: nsDisplayListBuilder::IsAnimatedGeometryRoot(nsIFrame*, bool&, nsIFrame**)
#04: nsDisplayListBuilder::FindAnimatedGeometryRootFrameFor(nsIFrame*, bool&)
#05: nsDisplayListBuilder::FindAnimatedGeometryRootFor(nsIFrame*)
#06: RetainedDisplayListBuilder::ProcessFrame(nsIFrame*, nsDisplayListBuilder*, nsIFrame*, nsTArray<nsIFrame*>&, bool, nsRect*, AnimatedGeometryRoot**)
#07: RetainedDisplayListBuilder::ComputeRebuildRegion(nsTArray<nsIFrame*>&, nsRect*, AnimatedGeometryRoot**, nsTArray<nsIFrame*>&)
#08: RetainedDisplayListBuilder::AttemptPartialUpdate(unsigned int, mozilla::DisplayListChecker*)
#09: nsLayoutUtils::PaintFrame(gfxContext*, nsIFrame*, nsRegion const&, unsigned int, nsDisplayListBuilderMode, nsLayoutUtils::PaintFrameFlags)
#10: mozilla::PresShell::Paint(nsView*, nsRegion const&, mozilla::PaintFlags)
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Priority: -- → P3
Comment 1•6 years ago
|
||
This test case requires full-screen-api.allow-trusted-requests-only=false
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
| Assignee | ||
Comment 3•6 years ago
|
||
This assertion is harmless and quite difficult to get rid of without introducing unnecessary complexity.
I had a chat with Matt about this and will-change budgeting in general, and we came to the conclusion that in the long run we might even consider deleting the whole budget. It was initially added to avoid abuse of will-change property, but AFAIK there has not been any real world use-cases of this.
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/b4f592ebb7ec
Remove unnecessary assert r=mattwoodrow
Comment 5•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Updated•6 years ago
|
status-firefox70:
--- → unaffected
status-firefox71:
--- → unaffected
status-firefox-esr68:
--- → unaffected
Flags: in-testsuite? → in-testsuite-
You need to log in
before you can comment on or make changes to this bug.
Description
•