Bug 1593291 - Remove unnecessary assert r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D52395